fixing some issues